--- a/src/Views/search.hbs
+++ b/src/Views/search.hbs
@@ -1,1 +1,12 @@
-<h3>Search</h3>
+<h3 class="search">Search</h3>
+<div class="container">
+
+    <div class="row row-space">
+        <div class="col col-sm">
+            <div class="product">Sản phẩm 1</div>
+            <div class="product">Sản phẩm 2</div>
+            <div class="product">Sản phẩm 3</div>
+            <div class="product">Sản phẩm 4</div>
+        </div>
+    </div>
+</div>
